Terraform_VPC/sg.tf
resource "aws_security_group" "vpc_demo_sg" {
  name        = "vpc_demo_allow_http_sg"
  description = "Allow HTTP inbound traffic"
  vpc_id = aws_vpc.custom_vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_http"
  }
}
