Terraform_VPC/vpc.tf
resource "aws_vpc" "custom_vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "my-VPC"
  }
}
